# opengl-test

./: CMakeLists.txt
app1/lib/assimp/: CMakeLists.txt
app1/shaders/: a1.frag  a1.vert  a1_lamp.frag
app1/src/: camera.hpp  lights.hpp  main.cpp  main.hpp  mesh.cpp  mesh.hpp  types.hpp  vao.hpp
app1/src/shaders/: a1.frag  a1.vert
models/: Sphere.3ds  ball.3DS  ball2.3DS  torus.3DS
